--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -6,7 +6,7 @@
       </head>
  <body>
       <header>                                             
-       <img src="https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon.png">                                                       
+       <img src=.images/icon.png">                                                       
         </header>                                            
                                                              
         <footer>                                             
