--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,9 +1,9 @@
 
 <html>
 <head>
-              <link rel="stylesheet" href="4-common.css">
-               <link rel="stylesheet" href="4-header.css">
-                <link rel="stylesheet" href="4-footer.css">
+              <link rel="stylesheet" href="styles/4-common.css">
+               <link rel="stylesheet" href="styles/4-header.css">
+                <link rel="stylesheet" href="styles4-footer.css">
 				<link rel="stylesheet" href="4-filters.css">
       </head>
  <body>
