--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -4,7 +4,7 @@
               <link rel="stylesheet" href="styles/4-common.css">
                <link rel="stylesheet" href="styles/4-header.css">
                 <link rel="stylesheet" href="styles4-footer.css">
-				<link rel="stylesheet" href="4-filters.css">
+		<link rel="stylesheet" href="styles/4-filters.css">
       </head>
  <body>
       <header>                                             
