--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -6,7 +6,7 @@
       </head>
  <body>
       <header>                                             
-       <img src=.images/icon.png">                                                       
+       <img src=./images/icon.png">                                                       
         </header>                                            
                                                              
         <footer>                                             
