--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,14 +1,16 @@
 
 <html>
 <head>
+		<title>AirBnB clone</title>
               <link rel="stylesheet" href="styles/4-common.css">
                <link rel="stylesheet" href="styles/3-header.css">
                 <link rel="stylesheet" href="styles3-footer.css">
 		<link rel="stylesheet" href="styles/4-filters.css">
+		 <link rel="icon" href="images/icon.png">
       </head>
  <body>
       <header>                                             
-       <img src="./icon.png"><h1><span>hbnb</span></h1>
+	      <div class="logo"></div><h1><span>hbnb</span></h1>
         </header>                                            
    			 <div class="container">    
 		   <section class="filters">
