--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -1,15 +1,16 @@
 
 <html>
-<head>
+<head>	
+	<title>AirBnB clone</title>
     <link rel="stylesheet" href="styles/4-common.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/6-filters.css">
-    <link rel="stylesheet" href="styles/7-places.css">
+     <link rel="icon" href="images/icon.png">
       </head>
  <body>
       <header>                                             
-       <img src="./icon.png"><h1>hbnb</h1>
+	      <div class="logo"></div><h1>hbnb</h1>
         </header>                                            
    			 <div class="container">    
 			   <section class="filters">
