--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-    <link rel="stylesheet" href="4-common.css">
-    <link rel="stylesheet" href="3-footer.css">
-    <link rel="stylesheet" href="3-header.css">
-    <link rel="stylesheet" href="6-filters.css">
-    <link rel="stylesheet" href="7-places.css">
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/6-filters.css">
+    <link rel="stylesheet" href="styles/8-places.css">
       </head>
  <body>
       <header>                                             
@@ -177,4 +177,4 @@
                                                              
 </body>                                                      
                                                              
-</html>
+</html>		
