--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,13 +1,15 @@
 <html>                                                       
-        <head>                                               		<style>
+        <head>    
+		<style>
 	body{
-		                                                     	margin: 0;
+		
+	margin: 0;
 	 padding:0;
 	 width: 100%;
 	height: 100;
 	
 	}
-		.header{
+	.header{
 	
 	color: #FF0000;
 	 height: 60px;
@@ -25,6 +27,7 @@
 	bottom: 0;
 	 width: 100%
 	}
+	</style>
         </head>                                              
                                                              
 <body>              
